[package]
name = "isitfurverster"
version = "0.1.0"
edition = "2021"
authors = ["Maakinoh"]
license = "MIT"
description = "Checks if it is furverster already"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11", features = ["blocking", "serde_json", "json"] }
scraper = "0.12.0"
clap = { version = "4.5.1", features = ["cargo"]}
regex = "1.10.3"
#openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.197", features = ["derive"] }

[target.aarch64-unknown-linux-gnu]
